Completed test coverage and linted.

--- a/.pylint.rc
+++ b/.pylint.rc
@@ -12,7 +12,7 @@ profile=no
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=manage.py, migrations, main.py, testing, tests, documentation-build, documentation-source, sitecustomize.py, protobufs
+ignore=manage.py, migrations, testing, tests, documentation-build, documentation-source, sitecustomize.py, protobufs
 
 # Pickle collected data for later comparisons.
 persistent=yes
