Move requirements.txt to Pipfile.

--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "==2.4.3"
+pytest = "==5.2.2"
+pytest-cov = "==2.8.1"
+yapf = "==0.28.0"
 
 [packages]
+beautifulsoup4 = "==4.8.1"
+click = "==7.0"
+gkeepapi = "==0.11.8"
 
 [requires]
 python_version = "3.7"
